<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/input_first_digit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_second_digit"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_sum_calculator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/btn_sum"
            android:background="@color/colorAccent"/>

        <Button
            android:id="@+id/button_difference_calculator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/btn_difference"
            android:background="@color/colorPrimary"/>
        <Button
            android:id="@+id/button_multiply_calculator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/btn_multiply"
            android:background="@color/colorAccent"/>

        <Button
            android:id="@+id/button_div_calculator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/btn_division"
            android:background="@color/colorPrimary"/>

    </LinearLayout>


    <Button
        android:id="@+id/button_equals_calculator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_equals"
        android:enabled="false"
        />

    <TextView
        android:id="@+id/result_calculator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>